MDStackLayout doesn't exist, using now normal kivy StackLayout

--- a/views/main.kv
+++ b/views/main.kv
@@ -176,7 +176,7 @@ MDScreen:
             #     width: "20dp"
 
         #* Videos + selected
-        MDStackLayout:
+        StackLayout:
             size_hint_y: .7
 
             # video cercati
